clusters/microk8s/infrastructure/mqtt/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mqtt
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    protocol: TCP
  - name: websockets
    port: 9001
    targetPort: 9001
    protocol: TCP
  selector:
    app: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-external
  namespace: mqtt
  labels:
    app: mosquitto
spec:
  type: NodePort
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    nodePort: 31883
    protocol: TCP
  - name: websockets
    port: 9001
    targetPort: 9001
    nodePort: 31901
    protocol: TCP
  selector:
    app: mosquitto
